--- a/ClubSite/ClubSite/Views/Shared/_Layout.cshtml
+++ b/ClubSite/ClubSite/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Carousel</a>
+            <a class="navbar-brand" href="#">Dating Сlub "Cupid"</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,10 +21,10 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">My Page</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link active" href="#"  aria-current="page">Activity</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -40,7 +40,7 @@
 </div>
 <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>© 2017–2021 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+    <p>© 2021 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
 </footer>
 <script src="~/js/bootstrap.min.js"> </script>
 </body>
