--- a/CalculatorWeb/CalculatorWeb/Views/Home/Index.cshtml
+++ b/CalculatorWeb/CalculatorWeb/Views/Home/Index.cshtml
@@ -3,6 +3,18 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Калькулятор</h1>
+	<form method="post" action="~/Home/Operations">
+		<label>Первое число:</label><br/>
+		<input type="number" name="numberA"/><br/><br/>
+		<select name="act">
+			<option>+</option>
+			<option>-</option>
+			<option>*</option>
+			<option>/</option>
+		</select><br/>
+		<label>Второе число:</label><br/>
+		<input type="number" name="numberB"/><br/><br/>
+		<input type="submit" value="Посчитать"/>
+	</form>
 </div>
