--- a/SneakerShop/SneakerShop/Views/Sneakers/Index.cshtml
+++ b/SneakerShop/SneakerShop/Views/Sneakers/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿<h1>@Model.CurrentCategory</h1>
+<div class="row mt-5 mb-2">
 @{
 	foreach (var sneaker in Model.GetSneakers)
 	{
-		<div>
+		<div class="col-lg-4">
+			<img class="img-thumbnail" src="@sneaker.Img" alt="@sneaker.Name"/>
 			<h2>Модель: @sneaker.Name</h2>
 			<p>Цена: @sneaker.Price.ToString("C")</p>
+			<p> <a class="btn btn-warning" href="#">Подробнее</a></p>
 		</div>	
 	}
 }
+</div>
