--- a/SneakerShop/SneakerShop/Views/Shared/ShowSneakers.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/ShowSneakers.cshtml
@@ -2,8 +2,7 @@
 
 <div class="col-lg-4">
 	<img class="img-thumbnail" src="@Model.Img" alt="@Model.Name"/>
-	<h2>@Model.Name</h2>
-	<p>@Model.Season</p>
-	<p>Price: @Model.Price.ToString("C")</p>
-	<p><a class="btn btn-warning" href="#">Подробнее</a></p>
+	<h2>Модель: @Model.Name</h2>
+	<p>Цена: @Model.Price.ToString("C")</p>
+	<p> <a class="btn btn-warning" href="#">Подробнее</a></p>
 </div>
