--- a/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
@@ -18,10 +18,11 @@
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">Adidas</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">Nike</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">NB</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">UGG</a></li>
+            <li><a href="/ShopCart/" class="nav-link px-2 link-dark">Корзина</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -39,7 +40,7 @@
             <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
             </a>
-            <span class="text-muted">© 2021 Company, Inc</span>
+            <span class="text-muted">© 2022 Company, Inc</span>
         </div>
 
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
