--- a/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+            <li><a asp-controller="Home" asp-action="Index" class="nav-link px-2 link-secondary">Home</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">Adidas</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">Nike</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">NB</a></li>
