--- a/SneakerShop/SneakerShop/Views/ShopCart/Index.cshtml
+++ b/SneakerShop/SneakerShop/Views/ShopCart/Index.cshtml
@@ -4,10 +4,10 @@
 	@foreach (var el in Model.ShopCart.ListShopItems)
 	{
 		<div class="alert alert-warning mt-3">
-			<b>Кроссовки:</b>@el.Sneaker.Name<br/>
-			<b>Price:</b>@el.Sneaker.Price.ToString("C")
+			<b>Кроссовки:</b>@el.Id<br/>
+			<b>Price:</b>@el.Price.ToString("C")
 		</div>
 	}
 	<hr/>
-	<div class="btn btn-danger" asp-controller="order">Оплатить</div>
+	<a class="btn btn-danger mb-5" asp-controller="Order" asp-action="Checkout">Оплатить</a>
 </div>
