Add href for other category

--- a/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a asp-controller="Home" asp-action="Index" class="nav-link px-2 link-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Adidas</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Nike</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">NB</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">UGG</a></li>
+            <li><a asp-controller="Home" asp-action="Index"  class="nav-link px-2 link-secondary">Home</a></li>
+            <li><a href="/Sneakers/Index/Adidas" class="nav-link px-2 link-dark">Adidas</a></li>
+            <li><a href="/Sneakers/Index/Nike" class="nav-link px-2 link-dark">Nike</a></li>
+            <li><a href="/Sneakers/Index/NB" class="nav-link px-2 link-dark">NB</a></li>
+            <li><a href="/Sneakers/Index/UGG" class="nav-link px-2 link-dark">UGG</a></li>
             <li><a href="/ShopCart/" class="nav-link px-2 link-dark">Корзина</a></li>
         </ul>
 
