--- a/SneakerShop/SneakerShop/Views/Shared/ShowSneakers.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/ShowSneakers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Sneaker
 
-<div class="col-lg-4">
-	<img class="img-thumbnail" src="@Model.Img" alt="@Model.Name"/>
+<div class="col-lg-3">
+	<img class="img-thumbnail" width="300" src="@Model.Img" alt="@Model.Name"/>
 	<h2>Модель: @Model.Name</h2>
 	<p>Цена: @Model.Price.ToString("C")</p>
 	<p> <a class="btn btn-warning" asp-controller="ShopCart" asp-action="AddToCart" asp-route-id="@Model.Id">Добавить в корзину</a></p>
