Admin Sneaker Create and SneakersList

--- a/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             <li><a href="/Sneakers/Index/Nike" class="nav-link px-2 link-dark">Nike</a></li>
             <li><a href="/Sneakers/Index/NB" class="nav-link px-2 link-dark">NB</a></li>
             <li><a href="/Sneakers/Index/UGG" class="nav-link px-2 link-dark">UGG</a></li>
-            <li><a href="/ShopCart/" class="nav-link px-2 link-dark">Корзина</a></li>
+	        <li><a href="/ShopCart/" class="nav-link px-2 link-dark">Корзина</a></li>
+	        <li><a href="/Sneakers/SneakersList" class="nav-link px-2 link-dark">Admin Only</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
