--- a/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
             <li><a href="/Sneakers/Index/UGG" class="nav-link px-2 link-dark">UGG</a></li>
 	        <li><a href="/ShopCart/" class="nav-link px-2 link-dark">Корзина</a></li>
 	        <li><a href="/Sneakers/SneakersList" class="nav-link px-2 link-dark">Admin Only</a></li>
+	        <li><a href="/Order/OrderList" class="nav-link px-2 link-dark">Admin Order</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
