--- a/SneakerShop/SneakerShop/Views/Order/OrderList.cshtml
+++ b/SneakerShop/SneakerShop/Views/Order/OrderList.cshtml
@@ -5,9 +5,8 @@
 }
 
 <h1>OrderList</h1>
-
-<p class="float-right">
-    <a asp-action="Create" class="btn btn-outline-primary" >Add New</a>
+<p class="col-md-4">
+	<a asp-action="Create" class="btn btn-outline-primary">Add New</a>
 </p>
 <table class="table">
     <thead>
@@ -33,27 +32,26 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-	        <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-	        <td>
-		        @Html.DisplayFor(modelItem => item.Adress)
-	        </td>
-	        <td>
-		        @Html.DisplayFor(modelItem => item.SneakerName)
-	        </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
+	<tr>
+		<td>
+			@Html.ActionLink("Delete", "DeleteOrder", new {  id=item.Id }, new{@class = "btn btn-danger", onclick="return confirm('Do you really want to delete?')"})
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.Name)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.Surname)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.Price)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.Adress)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.SneakerName)
+		</td>
+	</tr>
 }
     </tbody>
 </table>
