--- a/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
@@ -31,9 +31,32 @@
             <button type="button" class="btn btn-outline-primary me-2">Login</button>
             <button type="button" class="btn btn-primary">Sign-up</button>
         </div>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://easydrop.one/media/uploads/images/e36966d8-a027-4f24-8929-cfdd3264990a.jpg" width="1300" height="500" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://easydrop.one/media/uploads/images/1ae8a0cf-17db-4499-92b5-5601f8bd776e.jpg" width="1300" height="500" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://easydrop.one/media/uploads/images/db8c101d-226d-4d6f-bc96-bf62b8702c64.jpg" width="1300" height="500" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
     </header>
 </div>
+
 <div class="container mt-5">
+
     @RenderBody()
 </div>
 <div class="container">
