--- a/SneakerShop/SneakerShop/Views/Shared/ShowSneakers.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/ShowSneakers.cshtml
@@ -4,5 +4,7 @@
 	<img class="img-thumbnail" width="300" src="@Model.Img" alt="@Model.Name"/>
 	<h2>Модель: @Model.Name</h2>
 	<p>Цена: @Model.Price.ToString("C")</p>
+	<p>Сезон: @Model.Season</p>
+	<p>Размер: @Model.Size</p>
 	<p> <a class="btn btn-warning" asp-controller="ShopCart" asp-action="AddToCart" asp-route-id="@Model.Id">Добавить в корзину</a></p>
 </div>
