Added size selection at checkout And added size to order table

--- a/SneakerShop/SneakerShop/Views/Order/Checkout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Order/Checkout.cshtml
@@ -31,6 +31,13 @@
 				<span asp-validation-for="Phone" class="text-danger"></span>
 			</div>
 		</div>
+		<div class="form-group">
+			<label asp-for="SneakerSizeOrder">Укажите размер</label>
+			<div class="col-md-5">
+				<input asp-for="SneakerSizeOrder" class="form-control" />
+				<span asp-validation-for="SneakerSizeOrder" class="text-danger"></span>
+			</div>
+		</div>
 		<input class="btn btn-success" type="submit" value="Завершить заказ"/>
 	</form>
 </div>
