--- a/SneakerShop/SneakerShop/Views/Order/OrderList.cshtml
+++ b/SneakerShop/SneakerShop/Views/Order/OrderList.cshtml
@@ -30,6 +30,9 @@
 			<th>
 		        @Html.DisplayNameFor(model => model.Price)
 	        </th>
+			<th>
+		        Размер
+	        </th>
 	        <th></th>
         </tr>
     </thead>
@@ -54,6 +57,9 @@
 		</td>
 		<td>
 			@Html.DisplayFor(modelItem => item.Price)
+		</td>
+		<td>
+			@Html.DisplayFor(modelItem => item.SneakerSize)
 		</td>
 		<td>
 			@Html.ActionLink("Delete", "DeleteOrder", new {  id=item.Id }, new{@class = "btn btn-danger", onclick="return confirm('Do you really want to delete?')"})
