Added new property

--- a/ITVDN_UserInterface/SimpleApp/SimpleApp/Views/Products/Details.cshtml
+++ b/ITVDN_UserInterface/SimpleApp/SimpleApp/Views/Products/Details.cshtml
@@ -26,6 +26,14 @@
             <td>Цена</td>
             <td>@Model.Price</td>
         </tr>
+         <tr>
+            <td>Описание</td>
+            <td>@Model.Description</td>
+        </tr>
+         <tr>
+            <td>Количество</td>
+            <td>@Model.Count</td>
+        </tr>
     </table>
 </body>
 </html>
