--- a/ITVDN_UserInterface/SimpleApp/SimpleApp/Views/Products/List.cshtml
+++ b/ITVDN_UserInterface/SimpleApp/SimpleApp/Views/Products/List.cshtml
@@ -41,16 +41,22 @@
         Если условие выполняется отображается один фрагмент HTML кода.
         Иначе отображается блок HTML кода else
     *@
-    @if (Model.Count != 0)
+    @if (Model.Count >= 0 && Model.Count < 5 )
     {
         <p>
-            Всего: @Model.Count
+            Заканчивается
+        </p>
+    }
+    else if(Model.Count > 5)
+    {
+        <p>
+            В наличии
         </p>
     }
     else
     {
         <p>
-            Список пуст.
+            Нет в наличии
         </p>
     }
 </body>
