Added new photo

--- a/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+            <img src="https://c.wallhere.com/photos/f7/1b/sneakers_illustration-1977351.jpg!d" width="234" height="100" alt="...">
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -26,21 +26,27 @@
 	        <li><a href="/Sneakers/SneakersList" class="nav-link px-2 link-dark">Admin Only</a></li>
 	        <li><a href="/Order/OrderList" class="nav-link px-2 link-dark">Admin Order</a></li>
         </ul>
-
+        <hr /><!-- 
         <div class="col-md-3 text-end">
             <button type="button" class="btn btn-outline-primary me-2">Login</button>
             <button type="button" class="btn btn-primary">Sign-up</button>
         </div>
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        -->
+    </header>
+</div>
+
+<div class="container mt-5">
+    <div class="container">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://easydrop.one/media/uploads/images/e36966d8-a027-4f24-8929-cfdd3264990a.jpg" width="1300" height="500" alt="...">
+      <img src="https://kartinkin.net/uploads/posts/2021-07/thumbs/1626747686_9-kartinkin-com-p-krossovki-fon-krasivo-13.jpg" width="1300"  height="500" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://easydrop.one/media/uploads/images/1ae8a0cf-17db-4499-92b5-5601f8bd776e.jpg" width="1300" height="500" alt="...">
+      <img src="https://kartinkin.net/uploads/posts/2021-07/thumbs/1626747748_20-kartinkin-com-p-krossovki-fon-krasivo-26.jpg" width="1300" height="500" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="https://easydrop.one/media/uploads/images/db8c101d-226d-4d6f-bc96-bf62b8702c64.jpg" width="1300" height="500" alt="...">
+      <img src="https://c.wallhere.com/photos/f7/1b/sneakers_illustration-1977351.jpg!d" width="1300" height="500" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -52,11 +58,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-    </header>
 </div>
-
-<div class="container mt-5">
-
     @RenderBody()
 </div>
 <div class="container">
