--- a/SneakerShop/SneakerShop/Views/Home/Index.cshtml
+++ b/SneakerShop/SneakerShop/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model HomeViewModel
-
+@{
+    ViewData["Title"] = "Головна сторінка";
+}
 <h1>Новые кроссовки</h1>
 <div class="row mt-5 mb-2">
 	@{
