--- a/FormsAndValidation/FormsAndValidation/Views/Home/Register.cshtml
+++ b/FormsAndValidation/FormsAndValidation/Views/Home/Register.cshtml
@@ -32,6 +32,11 @@
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
+            <div>
+                <label class="control-label">Название курса</label>
+                <select name="SelectItem" asp-items="@ViewBag.SelectItems"></select>
+                <span asp-validation-for="SelectItem" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Register" class="btn btn-primary" />
             </div>
