Changed photo and add sum order

--- a/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
+++ b/SneakerShop/SneakerShop/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="https://c.wallhere.com/photos/f7/1b/sneakers_illustration-1977351.jpg!d" width="234" height="100" alt="...">
+            <img class="rounded-circle w-25 h-25" src="https://papik.pro/uploads/posts/2021-09/1631916908_16-papik-pro-p-malenkie-risunki-krossovok-18.png"  alt="...">
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
